--- a/ESSD_BAHAMAS_3.ipynb
+++ b/ESSD_BAHAMAS_3.ipynb
@@ -18,6 +18,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notes:\n",
+    "\n",
+    "Time since 2020-1-1\n",
+    "\n",
+    "https://github.com/eurec4a/meta/blob/master/naming_conventions.md\n",
+    "\n",
+    "https://cfconventions.org/cf-conventions/cf-conventions.html#time-coordinate\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -26,7 +39,7 @@
     "#Load BAHAMAS files (version from DLR-HALO-DATABASE)\n",
     "file_list = sorted(glob.glob(\"/Users/marcusklingebiel/Desktop/BAHAMAS/\"+\"*.nc\"))\n",
     "\n",
-    "prefix = \"EUREC4A_10Hz_Position_Attitude_\""
+    "prefix = \"EUREC4A_HALO_BAHAMAS_PositionAttitude_\""
    ]
   },
   {
@@ -37,7 +50,7 @@
     {
      "data": {
       "text/plain": [
-       "'20200115a'"
+       "'20200115'"
       ]
      },
      "execution_count": 3,
@@ -46,12 +59,12 @@
     }
    ],
    "source": [
-    "file_list[0][-12:-3]"
+    "file_list[0][-12:-4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +79,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c040fba4ef545f6aceee462bbdbe273",
+       "model_id": "19ad5eb55b984cb7a718f727aa36761e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -93,11 +106,11 @@
     "for i in tqdm(range(len(file_list))):\n",
     "#for i in range(0,1):\n",
     "    file = xr.open_dataset(file_list[i],decode_times=False)\n",
-    "    flight_acronym = file_list[i][-12:-3]\n",
+    "    flight_acronym = file_list[i][-12:-4]\n",
     "    flight_id = \"HALO-\"+file_list[i][-8:-4]\n",
     "\n",
     "    #Create new netCDF file\n",
-    "    ncfile = netCDF4.Dataset(prefix+flight_acronym+'.nc',mode='w',format='NETCDF4_CLASSIC')\n",
+    "    ncfile = netCDF4.Dataset(prefix+flight_acronym+'_v1.0.nc',mode='w',format='NETCDF4_CLASSIC')\n",
     "\n",
     "    #Create attributes\n",
     "    ncfile.title='EUERC4A position and attitude data'\n",
@@ -106,6 +119,7 @@
     "    ncfile.platform=\"HALO\"\n",
     "    ncfile.flight_id=str(flight_id)\n",
     "    ncfile.date_last_revised=file.date_last_revised\n",
+    "    ncfile.featureType = \"trajectory\"\n",
     "    today = date.today()\n",
     "    ncfile.file_created = \"File created by M. Klingebiel (email: marcus.klingebiel@uni-leipzig.de) on \"+today.strftime(\"%B %d, %Y\")\n",
     "    \n",
@@ -115,16 +129,19 @@
     "\n",
     "    #Create variables\n",
     "    time = ncfile.createVariable('time', np.float64, ('time',),fill_value=-9900.0)\n",
-    "    time.units = \"s\"\n",
-    "    time.long_name = 'time in seconds since 1970-1-1 (UTC)'\n",
+    "    time.units = \"seconds since 2020-1-1 00:00\"\n",
+    "    time.long_name = 'Time in seconds since 2020-1-1'    \n",
     "    \n",
-    "\n",
+    "    #timeold = ncfile.createVariable('timeOld', np.float64, ('time',),fill_value=-9900.0)\n",
+    "    #timeold.units = \"seconds since 1970-1-1\"\n",
+    "    #timeold.long_name = 'time in seconds since 1970-1-1 (UTC)'\n",
+    "    \n",
     "    lat = ncfile.createVariable('lat', np.float64, ('time',),fill_value=-9900.0)\n",
-    "    lat.units = 'degree'\n",
+    "    lat.units = 'degrees_north'\n",
     "    lat.long_name = 'WGS84 Datum/Latitude'\n",
     "\n",
     "    lon = ncfile.createVariable('lon', np.float64, ('time',),fill_value=-9900.0)\n",
-    "    lon.units = 'degree'\n",
+    "    lon.units = 'degree_east'\n",
     "    lon.long_name = 'WGS84 Datum/Longitude'\n",
     "\n",
     "    alt = ncfile.createVariable('alt', np.float32, ('time',),fill_value=-9900.0)\n",
@@ -145,10 +162,11 @@
     "    \n",
     "    tas = ncfile.createVariable('tas', np.float32, ('time',),fill_value=-9900.0)\n",
     "    tas.units = 'm/s'\n",
-    "    tas.long_name = 'True Air Speed'\n",
+    "    tas.long_name = 'Calculated True Airspeed'\n",
     "\n",
     "    #Write variables\n",
-    "    time[:]    = file.TIME.values[:]\n",
+    "    #timeold[:]    = file.TIME.values[:]\n",
+    "    time[:]= file.TIME.values[:] - np.float64(datetime.datetime(2020,1,1,0,0).strftime(\"%s\"))\n",
     "    lat[:]     = file.IRS_LAT.values[:]\n",
     "    lon[:]     = file.IRS_LON.values[:]\n",
     "    alt[:]     = file.IRS_ALT.values[:]\n",
@@ -162,6 +180,38 @@
     "    ncfile.close()\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = xr.load_dataset(prefix+flight_acronym+'_v1.0.nc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['2020-02-18T11:11:05.000000000', '2020-02-18T11:11:05.099999904',\n",
+       "       '2020-02-18T11:11:05.200000047', ...,\n",
+       "       '2020-02-18T19:55:31.700000047', '2020-02-18T19:55:31.799999952',\n",
+       "       '2020-02-18T19:55:31.900000095'], dtype='datetime64[ns]')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.time.values"
    ]
   },
   {
