--- a/ESSD_BAHAMAS_5.ipynb
+++ b/ESSD_BAHAMAS_5.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "336559a2ba3a4aa8b6d919170a25329f",
+       "model_id": "2248a3eae9af4e24bd29012c8de0971e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -123,9 +123,10 @@
     "    ncfile.source_file=str(filename)\n",
     "    ncfile.date_last_revised=file.date_last_revised\n",
     "    ncfile.featureType = \"trajectory\"\n",
-    "    #ncfile.Conventions = \"CF-1.7\"\n",
+    "    ncfile.Conventions = \"CF-1.7\"\n",
     "    today = date.today()\n",
     "    ncfile.version = \"1.0\"\n",
+    "    ncfile.history = \"acquired by HALO BAHAMAS, processed and quality checked by DLR FX, subsetted and reformatted by Marcus Klingebiel\"\n",
     "    ncfile.file_created = \"File created by M. Klingebiel (email: marcus.klingebiel@uni-leipzig.de) on \"+today.strftime(\"%B %d, %Y\")\n",
     "    \n",
     "\n",
@@ -166,22 +167,26 @@
     "    roll = ncfile.createVariable('roll', np.float32, ('time',),fill_value=-9900.0)\n",
     "    roll.units = 'degrees'\n",
     "    roll.long_name = 'roll angle'\n",
-    "    roll.standard_name = 'platform_roll_rate_starboard_down'\n",
+    "    roll.standard_name = 'platform_roll_starboard_down'\n",
+    "    roll.coordinates = \"lat lon alt\"\n",
     "\n",
     "    pitch = ncfile.createVariable('pitch', np.float32, ('time',),fill_value=-9900.0)\n",
     "    pitch.units = 'degrees'\n",
     "    pitch.long_name = 'pitch angle'\n",
     "    pitch.standard_name = \"platform_pitch_fore_up\"\n",
+    "    roll.coordinates = \"lat lon alt\"\n",
     "\n",
     "    heading = ncfile.createVariable('heading', np.float32, ('time',),fill_value=-9900.0)\n",
     "    heading.units = 'degrees'\n",
     "    heading.long_name = 'true heading'\n",
     "    heading.standard_name = 'platform_yaw_fore_starboard'\n",
+    "    roll.coordinates = \"lat lon alt\"\n",
     "    \n",
     "    tas = ncfile.createVariable('tas', np.float32, ('time',),fill_value=-9900.0)\n",
     "    tas.units = 'm/s'\n",
     "    tas.long_name = 'Calculated True Airspeed'\n",
     "    tas.standard_name = \"platform_speed_wrt_air\"\n",
+    "    roll.coordinates = \"lat lon alt\"\n",
     "    \n",
     "    #Write variables\n",
     "    #timeold[:]    = file.TIME.values[:]\n",
